Restrição para movimentação dentro do cenário.

--- a/css/battle.css
+++ b/css/battle.css
@@ -113,7 +113,7 @@
     height: 96px;
     position: absolute;
     top: 270px;
-    display: none;
+    display: block;
 }
 .player-one { left: 16px; }
 .player-two { right: 16px; }
