--- a/css/battle.css
+++ b/css/battle.css
@@ -33,7 +33,7 @@
     margin-top: 0; 
     background: whitesmoke;
 }
-.map-select-box { display: none; }
+.map-select-box { display: none; margin-top: 40px; }
 .map-select { padding: 10px 0; }
 .map-icon {
     width: 55px;
@@ -162,4 +162,31 @@
 .player-face:last-of-type {
     background: url(../img/personagens/blue_green_dragon.png) -96px 0 lightgoldenrodyellow;
     background-size: 288px !important;
+}
+
+.winner-banner {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: lightseagreen;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    padding: 10px 0;
+    display: none;
+    z-index: 3;
+}
+
+.winner-banner h3 {
+    font: 900 40px Champagne;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.winner-player {
+    height: 96px;
+    width: 96px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
