--- a/css/battle.css
+++ b/css/battle.css
@@ -57,12 +57,14 @@
 
 .player-status figure {
     margin-bottom: 5px;
+    margin-right: 5px;
     width: 105px;
     height: 100px;
     background-color: #ffeecc;
     border: 1px solid #0a6082;
     position: relative;
     box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.5);
+    display: inline-block;
 }
 
 .player-status img {
@@ -72,6 +74,34 @@
     left: 50%;
     transform: translateX(-50%);
     border: 0;
+}
+
+/* LIFE BAR */
+.life-section { 
+    display: inline-block;
+    vertical-align: top;
+}
+.life-bar-border {
+    width: 120px;
+    height: 20px;
+    box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.5);   
+    border-radius: 5px;
+}
+.life-bar {
+    background-color: green;
+    height: inherit;
+    border-radius: 5px;
+}
+.life-label {
+    color: saddlebrown;
+    font: bold 17px Arial;
+    position: relative;
+    display: block;
+}
+.life-value {
+    color: #808080;
+    font: 500 0.9em Arial;
+    display: inline-block;
 }
 
 .player-status > label {
@@ -190,3 +220,4 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
